--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,14 +3,14 @@
 <html>
 <head>
   <title>Jasmine Test Runner</title>
-  <link rel="stylesheet" type="text/css" href="lib/jasmine-1.0.1/jasmine.css">
-  <script type="text/javascript" src="lib/jasmine-1.0.1/jasmine.js"></script>
-  <script type="text/javascript" src="lib/jasmine-1.0.1/jasmine-html.js"></script>
+  <link rel="stylesheet" type="text/css" href="lib/jasmine/jasmine.css">
+  <script type="text/javascript" src="lib/jasmine/jasmine-1.0.1.js"></script>
+  <script type="text/javascript" src="lib/jasmine/jasmine-html.js"></script>
 
   <script type="text/javascript" src="lib/underscore.js"></script>
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec/rombuzzle_spec.js"></script>
+  <script type="text/javascript" src="spec/robozzle_spec.js"></script>
 
 </head>
 <body>
